[project]
name = "llm-litellm"
version = "0.1"
description = "LLM plugin for models hosted by LiteLLM"
readme = "README.md"
authors = [{name = "Zheng Wan"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm>=0.19",
    "httpx",
    "openai>=1.57.0",
]

[project.urls]
Homepage = "https://github.com/wanzheng/llm-litellm"
Changelog = "https://github.com/wanzheng/llm-litellm/releases"
Issues = "https://github.com/wanzheng/llm-litellm/issues"
CI = "https://github.com/wanzheng/llm-litellm/actions"

[project.entry-points.llm]
litellm = "llm_litellm"

[project.optional-dependencies]
test = ["pytest", "pytest-recording", "inline-snapshot"]
